# cal2

./: Cargo.toml  README  README.md
.github/workflows/: rust.yml
src/: cli.rs  display_month.rs  error.rs  holidays.rs  main.rs
src/cli/: actions.rs
