[package]
name = "cal2"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
chrono = "0.4.35"
clap = { version = "4.5.2", features = ["cargo", "derive"] }
colored = "2.1.0"
prettytable-rs = "0.10.0"
reqwest = { version = "0.11.24", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
shellexpand = "3.1.0"
thiserror = "1.0.57"

[dev-dependencies]
serial_test = "3.1.0"
